feat - blog - add new blog post

--- a/blog.html
+++ b/blog.html
@@ -55,32 +55,40 @@
                 <!-- blog 1 -->
                 <div class="blog--page blog--card" id="blog_1">
                     <div class="project--info">
-                        <h3 class="my--1 text--spacing">How to get started with Fetch()?</h3>
-                        <small class="">19 December 2020</small>
+                        <h3 class="my--1 text--spacing">How I made my own CSS framework akin to TailwindCSS?</h3>
+                        <small class="">30 July 2021</small>
                         <div class="project--tags py--1 flex">
                             <small class="project--tag">
-                                Javascript
+                                SCSS
                             </small>
                             <small class="project--tag">
-                                Fetch()
+                                CSS framework
+                            </small>
+                            <small class="project--tag">
+                                Tailwind
                             </small>
                         </div>
-                        <div class="project--desc py--1">
-                            The Fetch API provides an interface for fetching resources (including across the network). <br> 
-                            For making an request and fetching a response, you need to use the fetch() method that provides an easy, logical way to fetch resources asynchronously across the network. <br>
-                            <small class="">
-                                Example: I'll demonstrate a basic fetch request using a dummy API from Json Placeholder. This dummy API fetches a list of users with associated data.
-                            </small>
-                            <div class="code-box">
-                                <code class="">
-                                    fetch('https://jsonplaceholder.typicode.com/users') <br>
-                                        .then(response => response.json()) <br>
-                                        .then(data => console.log(data)); 
-                                </code>
+                        <div class="project--desc">
+                            <div class="">
+                                <h5 class="my--0">What is tailwind?</h5>
+                                It is a utility first framework. It provides thousands of utility classes that can be used together to build complex components, directly in your markup. 
+                                You'll rarely end up writing actual CSS.
                             </div>
+                            <div class="py--1">
+                                <h5 class="my--0">Why make my own framework?</h5>
+                                I decided to make my own framework to gain a better understanding of how it all works and test my CSS skills.
+                                I also used it in some of my react projects to test its usability, check 
+                                <a href="https://watch-wisp.netlify.app/" target="_blank" rel="noopener noreferrer" class="">this project</a> where I ended up using it.    
+                            </div>
+                            
+                            <div class="" style="padding-bottom: 0.75rem;">
+                                <h5 class="my--0">How it works?</h5>
+                                In Utility-based CSS frameworks, you style elements by applying pre-existing classes directly in your HTML. Check below example card that is made with MintUI
+                            </div>
+                            
                         </div>
                         <div class="project--card--buttons">
-                            <a href="https://dev.to/akshay_rajput/fetch-the-basics-4fdo" 
+                            <a href="https://dev.to/akshay_rajput/how-i-made-my-own-css-framework-akin-to-tailwindcss-29e2" 
                                target="_blank" rel="noopener noreferrer" class="btn--link btn--primary">
                                 <span class="fa fa-external-link-alt"></span>&nbsp; Read full post
                             </a>
@@ -121,6 +129,42 @@
                         <div class="project--card--buttons">
                             <a href="https://dev.to/akshay_rajput/keep-footer-at-bottom-of-page-using-flexbox-4a6f" 
                                target="_blank" rel="noreferrer" class="btn--link btn--primary">
+                                <span class="fa fa-external-link-alt"></span>&nbsp; Read full post
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- blog 3 -->
+                <div class="blog--page blog--card" id="blog_1">
+                    <div class="project--info">
+                        <h3 class="my--1 text--spacing">How to get started with Fetch()?</h3>
+                        <small class="">19 December 2020</small>
+                        <div class="project--tags py--1 flex">
+                            <small class="project--tag">
+                                Javascript
+                            </small>
+                            <small class="project--tag">
+                                Fetch()
+                            </small>
+                        </div>
+                        <div class="project--desc py--1">
+                            The Fetch API provides an interface for fetching resources (including across the network). <br> 
+                            For making an request and fetching a response, you need to use the fetch() method that provides an easy, logical way to fetch resources asynchronously across the network. <br>
+                            <small class="">
+                                Example: I'll demonstrate a basic fetch request using a dummy API from Json Placeholder. This dummy API fetches a list of users with associated data.
+                            </small>
+                            <div class="code-box">
+                                <code class="">
+                                    fetch('https://jsonplaceholder.typicode.com/users') <br>
+                                        .then(response => response.json()) <br>
+                                        .then(data => console.log(data)); 
+                                </code>
+                            </div>
+                        </div>
+                        <div class="project--card--buttons">
+                            <a href="https://dev.to/akshay_rajput/fetch-the-basics-4fdo" 
+                               target="_blank" rel="noopener noreferrer" class="btn--link btn--primary">
                                 <span class="fa fa-external-link-alt"></span>&nbsp; Read full post
                             </a>
                         </div>
