--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <div class="">
                 <h2 class="section-heading my--0">My Blog</h2>
             </div>
-            <a href="/blogs.html" class="btn--viewprojects">
+            <a href="/blog.html" class="btn--viewprojects">
                 View All <span class="fa fa-angle-right"></span>
             </a>
             <div class="full-w">
@@ -231,22 +231,23 @@
 
             <div class="blog--card">
                 <div class="project--info">
-                    <h3 class="my--1 text--spacing">How to get started with Fetch()?</h3>
+                    <h3 class="my--1 text--spacing">How I made my own CSS framework akin to TailwindCSS?</h3>
                     <div class="project--tags py--1 flex">
                         <small class="project--tag">
-                            Javascript
+                            SCSS
                         </small>
                         <small class="project--tag">
-                            Fetch()
+                            CSS framework
+                        </small>
+                        <small class="project--tag">
+                            Tailwind
                         </small>
                     </div>
                     <div class="project--desc py--1">
-                        The Fetch API provides an interface for fetching resources (including across the network). <br> 
-                        For making an request and fetching a response, you need to use the fetch() method that provides an easy, logical way to fetch resources asynchronously across the network.
-                        <br>
-                        <small class="">
-                            Example: I'll demonstrate a basic fetch request using a dummy API from Json Placeholder. This dummy API fetches a list of users with associated data.
-                        </small>
+                        I decided to make my own framework to gain a better understanding of how it all works and test my CSS skills.
+                        I also used it in some of my react projects to test its usability, check 
+                        <a href="https://watch-wisp.netlify.app/" target="_blank" rel="noopener noreferrer" class="">this project</a> where I ended up using it.
+                        
                     </div>
                     <div class="project--card--buttons">
                         <a href="/blog.html" class="btn--link btn--primary">
